--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <link rel="stylesheet" href="assets\reset.css"/>
-        <link rel="stylesheet" href="samplestyle.css"/>
+        <link rel="stylesheet" href="assets\style.css"/>
         <title> Initial Portfolio Prject</title>
         <style>
             .link {color: antiquewhite;}
@@ -70,10 +70,12 @@
         <section id="resume" class="resume">
             <a class="link" href="https://1drv.ms/w/s!AnRlNgoa3Cai3kgS5N8dKY_bv7TP?e=lms0Zz">Resume</a>
         </section>
+
+        <footer>
+            <h2> Made Using HTML and CSS</h2>
+            <P> TEXT EXAMPLE</P>
+        </footer>
     </div>
-    <footer>
-        <h2> Made Using HTML and CSS</h2>
-        <P> TEXT EXAMPLE</P>
-    </footer>
+   
 </body>
 </html>
