Initial Readme content and CSS updates

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="contact-information">
         <h1>Keeley Kerr</h1>
         <nav>
             <ul>
@@ -36,14 +36,15 @@
 	    <div id="sidebar">
             <a href="#about-me"><h2>About Me</h2></a>
             <a href="#work"><h2>Projects</h2></a>
-            <a href="#resume"><h2>Resume</h2></a>	    
+            <a href="#resume"><h2>Resume</h2></a>
+            <a href="#contact-information"><h2>Contact Information</h2></a>	    
 	    </div>
 	<div id="content">
             <section id="about-me" class="about">
-                <img src="assets\images\IMG-0123 (1).jpg " alt="place holder" width="700" height="700" style="float: right; margin-right: 25px"/>
-                <p> Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holderPlace holder Place holder Place holder Place holder.</p>
-                <p> Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holderPlace holder Place holder Place holder Place holder.</p>
-                <p> Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holder Place holderPlace holder Place holder Place holder Place holder.</p>
+                <img src="assets\images\IMG-0123 (1).jpg " alt="Image of Keeley Kerr" width="700" height="700" style="float: right; margin-right: 25px"/>
+                <p> Keeley Kerr is a Talent Specialist in the metals manufacturing industry with experience in Data Analytics, Web Development and UX Design. Her background in talent brand strategy, analytics, and project management allows for her strategic and competitive approach to work. Keeley is led by her passion for challenges and continuous learning. She considers herself a "forever student," eager to both build on her academic foundations in culture studies, data analytics and web design, and stays in tune with the latest talent marketing strategies through continued independent study.</p>
+                <p> Keeley's desire for continuous learning, and her determination to turn information into actions and action into results has contributed to her most recent success at Nucor, where she is currently leading efforts to clean up company HR data on an enterprise scale. Keeley has also improved the productivity of her team by providing a technical viewpoint and by assisting with the project to implement a system to the teammate learning and development online platforms to ensure proper usage.</p>
+                <p> Keeley believes that integrity and innovation are the keys to success not only in the work place, but also in life. As such she lives out these values through her educational pursuits and volunteer work in her personal time. In her free time, Keeley enjoys spending time with her family, baking bread and creating sample websites. Please reach out to keeley.s.sprouse@gmail.com to connect!.</p>
             </section>
 
         <section id="work">
