--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 <fieldset>
                     <legend> Movie and Beer Roulette</legend>
                     <a href="https://keekerr.github.io/Movie-Beer-Roulette/">
-                        <img src="https://github.com/keekerr/Initial-Portfolio/blob/main/assets/helping%20hands%20image.PNG?raw=true" alt="Coming Soon Graphic." width="230" height="230"/>
-                        <img src="https://github.com/keekerr/Movie-Beer-Roulette/blob/main/assets/images/Example.PNG?raw=true" alt="Image of complete Movie and Beer Roulette Application." />
+                        <img src="https://github.com/keekerr/Movie-Beer-Roulette/blob/main/assets/images/Example.PNG?raw=true" alt="Image of complete Movie and Beer Roulette Application." width="230" height="230"/>
                     </a> <br />
                 </fieldset>
     
